--- a/pom.xml
+++ b/pom.xml
@@ -42,36 +42,72 @@
       </plugin>
     </plugins>
   </build>
+	
 
   <profiles>
+  	<profile>
+		<id>legacy-integration-tests</id>
+		<build>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.11</version>
+					<configuration>
+						<includes>
+							<include>**/*Test.java</include>
+							<include>**/*Spec.java</include>
+						</includes>
+						<excludes>
+							<!-- Excludes inner classes -->
+							<exclude>*$*.java</exclude>
+							<!-- Test Suites include their tests regardless of @Category and must be excluded -->
+							<exclude>**/*TestSuite.java</exclude>
+						</excludes>
+						<excludedGroups>
+							com.convio.global.test.annotations.Flaky
+						</excludedGroups>
+						<groups>
+							com.microsoft.test.annotations.UnitTest
+						</groups>
+					</configuration>
+				</plugin>
+			</plugins>
+		</build>
+	</profile>
     <profile>
-        <id>slow-tests</id>
-        <build>
-            <plugins>
-                <plugin>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.11</version>
-                    <configuration>
-                        <groups>com.mycompany.SlowTests</groups>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </build>
-    </profile>
+        <profiles>
+  	<profile>
+		<id>component-tests</id>
+		<build>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.11</version>
+					<configuration>
+						<includes>
+							<include>**/*Test.java</include>
+							<include>**/*Spec.java</include>
+						</includes>
+						<excludes>
+							<!-- Excludes inner classes -->
+							<exclude>*$*.java</exclude>
+							<!-- Test Suites include their tests regardless of @Category and must be excluded -->
+							<exclude>**/*TestSuite.java</exclude>
+						</excludes>
+						<excludedGroups>
+							com.convio.global.test.annotations.Flaky
+						</excludedGroups>
+						<groups>
+							com.microsoft.test.annotations.ComponentTest
+						</groups>
+					</configuration>
+				</plugin>
+			</plugins>
+		</build>
+	</profile>
     <profile>
-        <id>fast-tests</id>
-        <build>
-            <plugins>
-                <plugin>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.11</version>
-                    <configuration>
-                        <groups>com.mycompany.FastTests</groups>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </build>
-    </profile>
 </profiles>
 
   <properties>
