--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
 							<exclude>**/*TestSuite.java</exclude>
 						</excludes>
 						<excludedGroups>
-							com.convio.global.test.annotations.Flaky
+							com.microsoft.test.annotations.Flaky
 						</excludedGroups>
 						<groups>
 							com.microsoft.test.annotations.UnitTest
@@ -95,7 +95,7 @@
 							<exclude>**/*TestSuite.java</exclude>
 						</excludes>
 						<excludedGroups>
-							com.convio.global.test.annotations.Flaky
+							com.microsoft.test.annotations.Flaky
 						</excludedGroups>
 						<groups>
 							com.microsoft.test.annotations.ComponentTest
@@ -105,6 +105,36 @@
 			</plugins>
 		</build>
 	</profile>
+	<profile>
+		<id>smoke-tests</id>
+		<build>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.11</version>
+					<configuration>
+						<includes>
+							<include>**/*Test.java</include>
+							<include>**/*Spec.java</include>
+						</includes>
+						<excludes>
+							<!-- Excludes inner classes -->
+							<exclude>*$*.java</exclude>
+							<!-- Test Suites include their tests regardless of @Category and must be excluded -->
+							<exclude>**/*TestSuite.java</exclude>
+						</excludes>
+						<excludedGroups>
+							com.microsoft.test.annotations.Flaky
+						</excludedGroups>
+						<groups>
+							com.microsoft.test.annotations.SmokeTest
+						</groups>
+					</configuration>
+				</plugin>
+			</plugins>
+		</build>
+	</profile>  
 </profiles>
 
   <properties>
