--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -8,7 +8,7 @@ trigger:
 
 resources:
   pipelines:
-  - pipeline: myappbuild  # Name of the pipeline resource
+  - pipeline: componentTest  # Name of the pipeline resource
     source: pipeline_componentTest # Name of the triggering pipeline
     trigger: 
       branches:
