--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,15 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
 trigger:
-- master
+- none
+
+resources:
+  pipelines:
+  - pipeline: componentTest  # Name of the pipeline resource
+    source: pipeline_componentTest # Name of the triggering pipeline
+    trigger: 
+      branches:
+      - master
 
 pool:
   vmImage: 'ubuntu-latest'
