Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,9 @@ resources:
   pipelines:
   - pipeline: componentTest
     source: pipeline_componentTest
+    trigger:
+     branches:
+     - master 
 
 pool:
   vmImage: 'ubuntu-latest'
