--- a/azure-pipelines-junit.yml
+++ b/azure-pipelines-junit.yml
@@ -14,7 +14,7 @@ steps:
   inputs:
     mavenPomFile: 'pom.xml'
     mavenOptions: '-Xmx3072m'
-    options: '-Plegacy-integration-tests'
+    #options: '-Plegacy-integration-tests'
     javaHomeOption: 'JDKVersion'
     jdkVersionOption: '1.8'
     jdkArchitectureOption: 'x64'
