Update azure-pipelines-junit.yml for Azure Pipelines

--- a/azure-pipelines-junit.yml
+++ b/azure-pipelines-junit.yml
@@ -4,7 +4,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
 trigger:
-- master
+- none
 
 pool:
   vmImage: 'ubuntu-latest'
@@ -14,7 +14,7 @@ steps:
   inputs:
     mavenPomFile: 'pom.xml'
     mavenOptions: '-Xmx3072m'
-    #options: '-Plegacy-integration-tests'
+    options: '-Plegacy-integration-tests'
     javaHomeOption: 'JDKVersion'
     jdkVersionOption: '1.8'
     jdkArchitectureOption: 'x64'
