Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,8 +4,14 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
 trigger:
-- master
-- feature/*
+  branches:
+    include:
+      - master
+    exclude:
+      - feature/*
+
+pr:
+  - feature/*
 
 pool:
   vmImage: 'ubuntu-latest'
