--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -39,13 +39,16 @@ steps:
 - script: az devops configure --defaults organization=https://dev.azure.com/osvaldosilva2 project="pipeline_test" --use-git-aliases true
   displayName: 'Set default Azure DevOps organization and project'
 
-#- script: az login
-#  displayName: 'try login'
-
 #- script: az pipelines create --name 'blackbaud.pipelines-java-component' --description 'Pipeline for pipelines-java test component' --repository blackbaud/pipelines-java --branch master --repository-type github --yml-path /azure-pipelines-component.yml
 #  displayName: 'Create pipeline from script'
 
-- script: |
-    az pipelines build list
-    git pr list
-  displayName: 'Show build list and PRs'
+- script: az pipelines create --name 'ContosoBuild' --description 'Pipeline for contoso project' --repository https://github.com/osvaldosilva2/pipelines-java --branch master --yml-path /azure-pipelines-2.yml
+ displayName: 'Create pipeline from script'
+
+#- script: |
+#    az pipelines build list
+#    git pr list
+#  displayName: 'Show build list and PRs'
+
+- script: git pr list
+  displayName: 'Show PRs'
