Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,14 +4,15 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
 trigger:
-  branches:
-    include:
-      - master
-    exclude:
-      - feature/*
+  - none
+#  branches:
+#    include:
+#      - master
+#    exclude:
+#      - feature/*
 
-pr:
-  - feature/*
+#pr:
+#  - feature/*
 
 pool:
   vmImage: 'ubuntu-latest'
