--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -45,7 +45,7 @@ steps:
 - script: az devops service-endpoint list
   displayName: 'endpoints'
 
-- script: az pipelines create --name 'ContosoBuild' --description 'Pipeline for contoso project' --repository https://github.com/osvaldosilva2/pipelines-java --branch master --service-connection 81b713fe-8b6b-448f-9e90-7c02846bd563 --yml-path /azure-pipelines.yml
+- script: az pipelines create --name 'Pipeline with script' --description 'Pipeline for contoso project' --repository https://github.com/osvaldosilva2/pipelines-java --branch master --service-connection 81b713fe-8b6b-448f-9e90-7c02846bd563 --yml-path /azure-pipelines.yml
   displayName: 'Create pipeline from script'
 
 #- script: |
